Use G1 again